--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongoose": "^6.0.12",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "node-fetch": "^3.1.0"
   },
   "devDependencies": {
     "jest": "^27.4.5"
